Update wallet api and swagger
