# server/docs/swagger.json
@@ -54,6 +54,14 @@
                 ],
                 "parameters": [
                     {
+                        "type": "string",
+                        "default": "Add access token here",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Credentials",
                         "name": "Body",
                         "in": "body",
@@ -86,6 +94,14 @@
                     "Users"
                 ],
                 "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Add access token here",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Create user",
                         "name": "user",
@@ -121,7 +137,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "default": "Add access token here",
                         "description": "Authorization",
                         "name": "Authorization",
                         "in": "header",
@@ -155,6 +171,16 @@
                 "tags": [
                     "Users"
                 ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Add access token here",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -176,6 +202,14 @@
                     "Users"
                 ],
                 "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Add access token here",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "User ID",
@@ -206,6 +240,69 @@
                 "tags": [
                     "Users"
                 ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Add access token here",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/api/wallets": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Wallets"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Wallets"
+                ],
+                "parameters": [
+                    {
+                        "description": "Create wallet",
+                        "name": "wallet",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Wallet"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -219,6 +316,19 @@
         }
     },
     "definitions": {
+        "models.CryptoCurrencyAlias": {
+            "type": "integer",
+            "enum": [
+                0,
+                1,
+                2
+            ],
+            "x-enum-varnames": [
+                "Bitcoin",
+                "USDT",
+                "Ethereum"
+            ]
+        },
         "models.LoginBody": {
             "type": "object",
             "properties": {
@@ -276,6 +386,32 @@
                 "last_name": {
                     "type": "string",
                     "example": "Doe"
+                },
+                "walletsIDs": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
+        "models.Wallet": {
+            "type": "object",
+            "properties": {
+                "balance": {
+                    "type": "number"
+                },
+                "currency_Type": {
+                    "$ref": "#/definitions/models.CryptoCurrencyAlias"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "userID": {
+                    "$ref": "#/definitions/models.User"
                 }
             }
         }
